[package]
name = "dse"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = { version = "1.10.0", features = ["attributes"] }
libp2p = {version = "0.43.0", features = ["dns-tokio", "tcp-tokio"]}
async-trait = "0.1.52"
futures = "0.3.21"
tokio = { version = "1.0" , features = [ "full" ]}
structopt = { version = "0.3" }
void = { version = "1.0.2" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
ethers = "0.6.2"
anyhow = "1.0.56"