[package]
name = "dse"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = { version = "1.10.0", features = ["attributes"] }
libp2p = {version = "0.43.0", features = ["dns-tokio", "tcp-tokio", "serde"]}
async-trait = "0.1.52"
futures = "0.3.21"
tokio = { version = "1.0" , features = [ "full" ]}
structopt = { version = "0.3" }
void = { version = "1.0.2" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0.56"
warp = "0.3"
futures-util = "0.3.21"
ethers = "0.6.2"
ethers-core = "0.6.2"
ethers-contract = "0.6.2"
ethers-providers = "0.6.2"
log = "0.4.16"
env_logger = "0.9.0"
sled = "0.34.7"
bincode = "1.3.3"
rand = "0.8.5"